; ModuleID = '/home/carl/AnghaBench/linux/sound/mips/extr_sgio2audio.c_read_ad1843_reg.c'
source_filename = "/home/carl/AnghaBench/linux/sound/mips/extr_sgio2audio.c_read_ad1843_reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32, i32 }
%struct.snd_sgio2audio = type { i32 }

@CODEC_CONTROL_ADDRESS_SHIFT = common dso_local global i32 0, align 4
@CODEC_CONTROL_READ = common dso_local global i32 0, align 4
@mace = common dso_local global %struct.TYPE_6__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @read_ad1843_reg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_ad1843_reg(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.snd_sgio2audio*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i8*, i8** %3, align 8
  %9 = bitcast i8* %8 to %struct.snd_sgio2audio*
  store %struct.snd_sgio2audio* %9, %struct.snd_sgio2audio** %5, align 8
  %10 = load %struct.snd_sgio2audio*, %struct.snd_sgio2audio** %5, align 8
  %11 = getelementptr inbounds %struct.snd_sgio2audio, %struct.snd_sgio2audio* %10, i32 0, i32 0
  %12 = load i64, i64* %7, align 8
  %13 = call i32 @spin_lock_irqsave(i32* %11, i64 %12)
  %14 = load i32, i32* %4, align 4
  %15 = load i32, i32* @CODEC_CONTROL_ADDRESS_SHIFT, align 4
  %16 = shl i32 %14, %15
  %17 = load i32, i32* @CODEC_CONTROL_READ, align 4
  %18 = or i32 %16, %17
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** @mace, align 8
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 1
  %23 = call i32 @writeq(i32 %18, i32* %22)
  %24 = call i32 (...) @wmb()
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** @mace, align 8
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 1
  %29 = call i32 @readq(i32* %28)
  store i32 %29, i32* %6, align 4
  %30 = call i32 @udelay(i32 200)
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** @mace, align 8
  %32 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %32, i32 0, i32 0
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i32 0, i32 0
  %35 = call i32 @readq(i32* %34)
  store i32 %35, i32* %6, align 4
  %36 = load %struct.snd_sgio2audio*, %struct.snd_sgio2audio** %5, align 8
  %37 = getelementptr inbounds %struct.snd_sgio2audio, %struct.snd_sgio2audio* %36, i32 0, i32 0
  %38 = load i64, i64* %7, align 8
  %39 = call i32 @spin_unlock_irqrestore(i32* %37, i64 %38)
  %40 = load i32, i32* %6, align 4
  ret i32 %40
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @writeq(i32, i32*) #1

declare dso_local i32 @wmb(...) #1

declare dso_local i32 @readq(i32*) #1

declare dso_local i32 @udelay(i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
